Added sentiment api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "boto3>=1.42.14",
+    "fastapi>=0.125.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "scikit-learn==1.7.2",
     "skl2onnx>=1.19.1",
     "torch>=2.9.1",
     "transformers>=4.57.3",
+    "uvicorn>=0.38.0",
 ]
 
 [dependency-groups]
@@ -19,5 +21,10 @@ integration = [
     "pytest>=9.0.2",
     "ruff>=0.14.10",
 ]
-deployment = []
-inference = []
+deployment = [
+    "tokenizer>=3.6.2",
+]
+inference = [
+    "onnxruntime>=1.23.2",
+    "tokenizer>=3.6.2",
+]
