--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "boto3>=1.42.14",
     "fastapi>=0.125.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
-    "scikit-learn==1.7.2",
-    "skl2onnx>=1.19.1",
-    "torch>=2.9.1",
-    "transformers>=4.57.3",
+    "tokenizers>=0.22.1",
     "uvicorn>=0.38.0",
 ]
 
@@ -20,11 +16,18 @@ dependencies = [
 integration = [
     "pytest>=9.0.2",
     "ruff>=0.14.10",
+    "boto3>=1.42.14",
+    "scikit-learn==1.7.2",
+    "skl2onnx>=1.19.1",
+    "torch>=2.9.1",
+    "transformers>=4.57.3",
+    "onnxruntime>=1.23.2",
 ]
 deployment = [
-    "tokenizer>=3.6.2",
+    "onnxruntime>=1.23.2",
+    "tokenizers>=0.22.1",
 ]
 inference = [
     "onnxruntime>=1.23.2",
-    "tokenizer>=3.6.2",
+    "tokenizers>=0.22.1",
 ]
