--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "tokenizers>=0.22.1",
     "uvicorn>=0.38.0",
+    "mangum>=0.19.0",
 ]
 
 [dependency-groups]
@@ -25,9 +26,7 @@ integration = [
 ]
 deployment = [
     "onnxruntime>=1.23.2",
-    "tokenizers>=0.22.1",
 ]
 inference = [
     "onnxruntime>=1.23.2",
-    "tokenizers>=0.22.1",
 ]
