Add awslambdaric to deployment image

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ embedding_dim=384
 onnx_classifier_path=artifacts/onnx_model/onnx_classifier.onnx
 onnx_embedding_model_path=artifacts/onnx_model/onnx_embeddings_model.onnx
 tokenizer_path=artifacts/onnx_model/tokenizer/
+
+
+curl -X POST https://9g5irumlt2.execute-api.us-east-1.amazonaws.com/predict -H "Content-Type: application/json" -d '{"text": "MLOps is amazing!"}'
