--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ integration = [
     "onnxruntime>=1.23.2",
 ]
 deployment = [
+    "awslambdaric>=3.1.1",
     "onnxruntime>=1.23.2",
 ]
 inference = [
