--- a/.github/workflows/ci_cd_workflow.yaml
+++ b/.github/workflows/ci_cd_workflow.yaml
@@ -1,6 +1,28 @@
 name: CI/CD workflow
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      steps:
+        description: "Define which steps to run in pipeline"
+        required: true
+        type: choice
+        options:
+          - integration
+          - all
+        default: all
+
+
+  # inputs:
+  #   steps:
+  #     description: "Select which steps of the pipeline should run"
+  #       required: true
+  #       type: choice
+  #       options:
+  #         - integration
+  #         - all
+  #       default: all
+
 
 env:
   AWS_REGION: us-east-1
@@ -11,6 +33,7 @@ jobs:
   integration:
     name: checks_and_tests
     runs-on: ubuntu-latest
+    if: ${{ inputs.steps == 'integration' || inputs.steps == 'all' }}
     steps:
       - name: Checkout code repo
         uses: actions/checkout@v4
@@ -31,6 +54,7 @@ jobs:
     needs: integration
     name: Container deployment
     runs-on: ubuntu-latest
+    if: ${{ inputs.steps == 'all' && needs.integration.result == 'success' }}
 
     steps:
       - name: Checkout code repo
